Updated the Github Link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<span class="credit">
 					<a
 						class="code-source"
-						href="https://github.com/SMei201900/JS-Project.git"
+						href="https://github.com/SMei201900/Vanilla-Weather-App"
 						target="_blank"
 					>
 						Open source code</a
