Added Weather Icon and realigned Text in HTML

--- a/index.html
+++ b/index.html
@@ -40,12 +40,21 @@
 					<div class="col-4 time-and-date">Time and Date</div>
 					<div class="col-4">
 						<div class="theweather">Weather</div>
+						<div class="clearfix">
+							<img
+								src="https://icon-library.com/images/weather-20-512.png"
+								alt="Sunny"
+								class="float-left"
+								id="icon"
+								width="100px"
+							/>
+						</div>
 						<div>
-							<div class="tempdigits">12</div>
+							<span class="tempdigits">12</div>
 							<a class="ren-to-cel" href="#"> °C</a>
 							|
 							<a class="cel-to-ren" href="#"> °F</a>
-						</div>
+						</span>
 					</div>
 					<div class="col-4">
 						<li class="precipiate">Precipitation:</li>
