--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 							/>
 						</div>
 						<div>
-							<span class="tempdigits">12</div>
+							<span class="tempdigits">12</span>
 							<a class="ren-to-cel" href="#"> °C</a>
 							|
 							<a class="cel-to-ren" href="#"> °F</a>
-						</span>
+						</div>
 					</div>
 					<div class="col-4">
 						<li class="precipiate">Precipitation:</li>
