Rearranged class identifier
I rearranged the class identifier in the HTML and JS File so that I can remove the text that I previously had in the JS File.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 						</div>
 					</div>
 					<div class="col-4">
-						<li class="theHumidity">Humidity:</li>
-						<li class="windSpeed">Wind:</li>
+						<li>Humidity: <span class="theHumidity"> </span></li>
+						<li>Wind: <span class="windSpeed"> </span></li>
 					</div>
 				</div>
 
