--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
 					>
 						Sally Mei
 					</a>
-					<a href="#" target="_blank"></a>
+					and
+					<a href="https://vibrant-morse-82e6af.netlify.app/" target="_blank">
+						hosted by Netlify</a
+					>
 				</span>
 			</div>
 		</div>
