Removed fake Forecast

--- a/index.html
+++ b/index.html
@@ -64,36 +64,7 @@
 
 				<br />
 
-				<div class="row">
-					<div class="col">
-						Sunday
-						<div class="col emoji">☀</div>
-					</div>
-					<div class="col">
-						Monday
-						<div class="col emoji">☀</div>
-					</div>
-					<div class="col">
-						Tuesday
-						<div class="col emoji">🌧</div>
-					</div>
-					<div class="col">
-						Wednesday
-						<div class="col emoji">🌦</div>
-					</div>
-					<div class="col">
-						Thursday
-						<div class="col emoji">🌥</div>
-					</div>
-					<div class="col">
-						Friday
-						<div class="col emoji">❄</div>
-					</div>
-					<div class="col">
-						Saturday
-						<div class="col emoji">☀</div>
-					</div>
-				</div>
+				<div id="forecast"></div>
 
 				<br />
 
